--- a/index.htm
+++ b/index.htm
@@ -547,8 +547,9 @@
                         </header>
                         <h2></h2>
                         <h2>Education</h2>
-                        <p>My name is Yunan Liu (刘雨楠). I am an Associate Professor in the Industrial and Systems
-                            Engineering Department at NC State University. I received my B.E. in Electrical
+                        <p>My name is Yunan Liu (刘雨楠). I am currently a principal research scientist at Amazon. Before this, 
+                            I was an professor in the Industrial and Systems
+                            Engineering Department at NC State University from 2011 to 2024. I received my B.E. in Electrical
                             Engineering from Tsinghua University in 2002; my M.S. in Industrial Engineering and
                             Operations Research (IEOR) from Columbia University in 2008; and my Ph.D., also in IEOR
                             from Columbia University, in 2011. The title of my dissertation is: “Many-server queues
