--- a/personal/finger-style-guitar/index.htm
+++ b/personal/finger-style-guitar/index.htm
@@ -457,8 +457,7 @@
 							<ul>
 								<li><a href="https://www.youtube.com/watch?v=XXRdzcCr61U">Rains of Castamere</a></li>
 								<li><a
-										href="https://m.youtube.com/watch?v=_pYp6UBYu0E&pp=ygUY5ZCJ5LuW5oyH5by577yaRm9yIGVsaXNl">For
-										Elise</a></li>
+										href="https://www.youtube.com/watch?v=mtYE3mRpLxY&list=RDMMmtYE3mRpLxY&start_radio=1">Black Myth: Wukong</a></li>
 								<li><a href="https://www.youtube.com/watch?v=3irfB58kVOU">My heart will go on</a></li>
 								<li><a href="https://www.youtube.com/watch?v=NQgzLFpjY8c">Castle in the sky</a></li>
 								<li><a href="https://www.youtube.com/watch?v=CE8tssGLCtA">Scarborough fair</a></li>
