--- a/personal/finger-style-guitar/index.htm
+++ b/personal/finger-style-guitar/index.htm
@@ -457,10 +457,13 @@
 							<ul>
 								<li><a href="https://www.youtube.com/watch?v=XXRdzcCr61U">Rains of Castamere</a></li>
 								<li><a
-										href="https://www.youtube.com/watch?v=mtYE3mRpLxY&list=RDMMmtYE3mRpLxY&start_radio=1">Black Myth: Wukong</a></li>
-								<li><a href="https://www.youtube.com/watch?v=3irfB58kVOU">My heart will go on</a></li>
-								<li><a href="https://www.youtube.com/watch?v=NQgzLFpjY8c">Castle in the sky</a></li>
-								<li><a href="https://www.youtube.com/watch?v=CE8tssGLCtA">Scarborough fair</a></li>
+										href="https://www.youtube.com/watch?v=mtYE3mRpLxY&list=RDMMmtYE3mRpLxY&start_radio=1">Black Myth Wukong</a></li>
+								<li><a href="https://www.youtube.com/watch?v=5LicqJn9-DU">Call of silence</a></li>
+								<li><a href="https://www.youtube.com/watch?v=sBYpv_c7JUo">Castle in the sky</a></li>
+								<li><a href="https://https://www.youtube.com/watch?v=EFRaXTVEMnw">Scarborough fair</a></li>
+								<li><a href="https://www.youtube.com/watch?v=pk0OaOmlsJw">Tai chi master</a></li>
+								<li><a href="https://www.youtube.com/watch?v=38OG3hXYWB0">Inuyasha 1</a></li>
+								<li><a href="https://www.youtube.com/watch?v=u9E-jqkcpAQ">Inuyasha 2</a></li>
 								<li><a href="https://www.youtube.com/watch?v=e6tFpBHtmU8">Legend of the white snake
 										Ep.1</a></li>
 								<li><a
