--- a/personal/finger-style-guitar/index.htm
+++ b/personal/finger-style-guitar/index.htm
@@ -455,15 +455,15 @@
 									width="856"></p>
 							<p>Youtube links of my guitar plays:</p>
 							<ul>
-								<li><a href="https://www.youtube.com/watch?v=XXRdzcCr61U">Rains of Castamere</a></li>
+								<li><a href="https://www.youtube.com/watch?v=XXRdzcCr61U">Rains of Castamere (卡斯特梅尔的雨季)</a></li>
 								<li><a
-										href="https://www.youtube.com/watch?v=mtYE3mRpLxY&list=RDMMmtYE3mRpLxY&start_radio=1">Black Myth Wukong</a></li>
-								<li><a href="https://www.youtube.com/watch?v=5LicqJn9-DU">Call of silence</a></li>
-								<li><a href="https://www.youtube.com/watch?v=sBYpv_c7JUo">Castle in the sky</a></li>
-								<li><a href="https://https://www.youtube.com/watch?v=EFRaXTVEMnw">Scarborough fair</a></li>
-								<li><a href="https://www.youtube.com/watch?v=pk0OaOmlsJw">Tai chi master</a></li>
-								<li><a href="https://www.youtube.com/watch?v=38OG3hXYWB0">Inuyasha 1</a></li>
-								<li><a href="https://www.youtube.com/watch?v=u9E-jqkcpAQ">Inuyasha 2</a></li>
+										href="https://www.youtube.com/watch?v=mtYE3mRpLxY&list=RDMMmtYE3mRpLxY&start_radio=1">Black Myth Wukong (敢问路在何方)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=5LicqJn9-DU">Call of silence (寂静的呼唤)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=sBYpv_c7JUo">Castle in the sky (天空之城)</a></li>
+								<li><a href="https://https://www.youtube.com/watch?v=EFRaXTVEMnw">Scarborough fair (斯卡布罗集市)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=pk0OaOmlsJw">Tai chi master (太极张三丰)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=38OG3hXYWB0">Inuyasha 1 (犬夜叉：穿越时空的思念)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=u9E-jqkcpAQ">Inuyasha 2 (犬夜叉：慕情)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=e6tFpBHtmU8">Legend of the white snake
 										Ep.1</a></li>
 								<li><a
