--- a/personal/finger-style-guitar/index.htm
+++ b/personal/finger-style-guitar/index.htm
@@ -464,6 +464,7 @@
 								<li><a href="https://www.youtube.com/watch?v=pk0OaOmlsJw">Tai chi master (太极张三丰)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=38OG3hXYWB0">Inuyasha 1 (犬夜叉：穿越时空的思念)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=u9E-jqkcpAQ">Inuyasha 2 (犬夜叉：慕情)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=WWmlMIeEGTg">Childhood memory (童年回忆)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=e6tFpBHtmU8">Legend of the white snake
 										Ep.1</a></li>
 								<li><a
