--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
 
     <link href="imgs/favicon.ico" rel="icon" type="image/x-ico">
 
-    <title>Welcome to Yunan Liu&#039;s Homepage &#8211; Assistant Professor, NC State University</title>
+    <title>Welcome to Yunan Liu&#039;s Homepage</title>
     <meta content='max-image-preview:large' name='robots'>
     <link href='//cdn.ncsu.edu' rel='dns-prefetch'>
     <link href="feed/index.htm" rel="alternate" title="Welcome to Yunan Liu&#039;s Homepage &raquo; Feed"
