--- a/personal/finger-style-guitar/index.htm
+++ b/personal/finger-style-guitar/index.htm
@@ -453,7 +453,7 @@
 									fetchpriority="high" height="638" sizes="(max-width: 856px) 100vw, 856px" src="../../files/2016/04/guitarocarina.jpg"
 									srcset=""
 									width="856"></p>
-							<p>Youtube links of my guitar plays:</p>
+							<p>I love making music with guitar and ocarina. I also work with my music partners with other instruments: banboo flute, erhu, and saxophone. Here are Youtube links of my music:</p>
 							<ul>
 								<li><a href="https://www.youtube.com/watch?v=XXRdzcCr61U">Rains of Castamere (卡斯特梅尔的雨季)</a></li>
 								<li><a
