--- a/personal/finger-style-guitar/index.htm
+++ b/personal/finger-style-guitar/index.htm
@@ -465,6 +465,11 @@
 								<li><a href="https://www.youtube.com/watch?v=38OG3hXYWB0">Inuyasha 1 (犬夜叉：穿越时空的思念)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=u9E-jqkcpAQ">Inuyasha 2 (犬夜叉：慕情)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=WWmlMIeEGTg">Childhood memory (童年回忆)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=PnBA_baI7ps">Dying to survive (我不是药神)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=2e4Ao4uBqBA">The Romance of the Condor Heroes (江湖笑)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=aCkxskq6aKU">The Untamed (无羁)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=BFG9uelELhA">Hi, Mom! (萱草花)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=afzq4j7pA-s">Dragon ball GT (渐渐被你吸引</a></li>
 								<li><a href="https://www.youtube.com/watch?v=e6tFpBHtmU8">Legend of the white snake
 										Ep.1</a></li>
 								<li><a
