--- a/personal/finger-style-guitar/index.htm
+++ b/personal/finger-style-guitar/index.htm
@@ -470,6 +470,13 @@
 								<li><a href="https://www.youtube.com/watch?v=aCkxskq6aKU">The Untamed (无羁)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=BFG9uelELhA">Hi, Mom! (萱草花)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=afzq4j7pA-s">Dragon ball GT (渐渐被你吸引</a></li>
+								<li><a href="https://www.youtube.com/watch?v=j7PN1-Pi8wc">From Up on Poppy Hill (虞美人盛开的山坡</a></li>
+								<li><a href="https://www.youtube.com/watch?v=2jXqqFW9g0g">The Romance of the Condor Heroes (断情殇)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=f-LWZzqYFwk">Demi-Gods and Semi-Devils (天龙八部-倾慕)</a></li>
+								<li><a href="https://youtube.com/watch?v=0qNLN4u_G4c">Fox Volant of the Snowy Mountain (雪山飞狐-追梦人)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=uDMit4BcqGI">Nirvana In Fire (琅琊榜-红颜旧)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=UiVfshjvCcw">The Smiling, Proud Wanderer (笑傲江湖-清心普善咒)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=UiVfshjvCcw">The Smiling, Proud Wanderer (笑傲江湖-清心普善咒)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=e6tFpBHtmU8">Legend of the white snake
 										Ep.1</a></li>
 								<li><a
