--- a/personal/finger-style-guitar/index.htm
+++ b/personal/finger-style-guitar/index.htm
@@ -455,30 +455,40 @@
 									width="856"></p>
 							<p>I love making music with guitar and ocarina. I also work with my music partners with other instruments: banboo flute, erhu, and saxophone. Here are Youtube links of my music:</p>
 							<ul>
-								<li><a href="https://www.youtube.com/watch?v=XXRdzcCr61U">Rains of Castamere (卡斯特梅尔的雨季)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=XXRdzcCr61U">Game of throne: Rains of Castamere (权力的游戏：卡斯特梅尔的雨季)</a></li>
 								<li><a
-										href="https://www.youtube.com/watch?v=mtYE3mRpLxY&list=RDMMmtYE3mRpLxY&start_radio=1">Black Myth Wukong (敢问路在何方)</a></li>
-								<li><a href="https://www.youtube.com/watch?v=5LicqJn9-DU">Call of silence (寂静的呼唤)</a></li>
+										href="https://www.youtube.com/watch?v=mtYE3mRpLxY&list=RDMMmtYE3mRpLxY&start_radio=1">Black Myth Wukong (西游记：敢问路在何方)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=5LicqJn9-DU">Call of silence (进击的巨人：寂静的呼唤)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=sBYpv_c7JUo">Castle in the sky (天空之城)</a></li>
-								<li><a href="https://https://www.youtube.com/watch?v=EFRaXTVEMnw">Scarborough fair (斯卡布罗集市)</a></li>
-								<li><a href="https://www.youtube.com/watch?v=pk0OaOmlsJw">Tai chi master (太极张三丰)</a></li>
+								<li><a href="https://https://www.youtube.com/watch?v=EFRaXTVEMnw">Scarborough fair (毕业生：斯卡布罗集市)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=pk0OaOmlsJw">Tai chi master (太极张三丰：随缘)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=38OG3hXYWB0">Inuyasha 1 (犬夜叉：穿越时空的思念)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=u9E-jqkcpAQ">Inuyasha 2 (犬夜叉：慕情)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=WWmlMIeEGTg">Childhood memory (童年回忆)</a></li>
-								<li><a href="https://www.youtube.com/watch?v=PnBA_baI7ps">Dying to survive (我不是药神)</a></li>
-								<li><a href="https://www.youtube.com/watch?v=2e4Ao4uBqBA">The Romance of the Condor Heroes (江湖笑)</a></li>
-								<li><a href="https://www.youtube.com/watch?v=aCkxskq6aKU">The Untamed (无羁)</a></li>
-								<li><a href="https://www.youtube.com/watch?v=BFG9uelELhA">Hi, Mom! (萱草花)</a></li>
-								<li><a href="https://www.youtube.com/watch?v=afzq4j7pA-s">Dragon ball GT (渐渐被你吸引</a></li>
-								<li><a href="https://www.youtube.com/watch?v=j7PN1-Pi8wc">From Up on Poppy Hill (虞美人盛开的山坡</a></li>
-								<li><a href="https://www.youtube.com/watch?v=2jXqqFW9g0g">The Romance of the Condor Heroes (断情殇)</a></li>
-								<li><a href="https://www.youtube.com/watch?v=f-LWZzqYFwk">Demi-Gods and Semi-Devils (天龙八部-倾慕)</a></li>
-								<li><a href="https://youtube.com/watch?v=0qNLN4u_G4c">Fox Volant of the Snowy Mountain (雪山飞狐-追梦人)</a></li>
-								<li><a href="https://www.youtube.com/watch?v=uDMit4BcqGI">Nirvana In Fire (琅琊榜-红颜旧)</a></li>
-								<li><a href="https://www.youtube.com/watch?v=UiVfshjvCcw">The Smiling, Proud Wanderer (笑傲江湖-清心普善咒)</a></li>
-								<li><a href="https://www.youtube.com/watch?v=UiVfshjvCcw">The Smiling, Proud Wanderer (笑傲江湖-清心普善咒)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=PnBA_baI7ps">Dying to survive (我不是药神：只要平凡)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=2e4Ao4uBqBA">The Romance of the Condor Heroes (神雕侠侣：江湖笑)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=aCkxskq6aKU">The Untamed (陈情令：无羁)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=BFG9uelELhA">Hi, Mom! (你好李焕英：萱草花)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=afzq4j7pA-s">Dragon ball GT (龙珠GT：渐渐被你吸引)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=j7PN1-Pi8wc">From Up on Poppy Hill (虞美人盛开的山坡：别了夏天)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=2jXqqFW9g0g">The Romance of the Condor Heroes (神雕侠侣：断情殇)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=f-LWZzqYFwk">Demi-Gods and Semi-Devils (天龙八部：倾慕)</a></li>
+								<li><a href="https://youtube.com/watch?v=0qNLN4u_G4c">Fox Volant of the Snowy Mountain (雪山飞狐：追梦人)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=uDMit4BcqGI">Nirvana In Fire (琅琊榜：红颜旧)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=UiVfshjvCcw">The Smiling, Proud Wanderer (笑傲江湖：清心普善咒)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=d70q4PcH_gM">Chinese Paladin (仙剑奇侠传四：回梦游仙)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=8aWPYVHO1As">Xuan Yuan Sword 1 (轩辕剑外传天之痕：如忆玉儿曲)</a></li>
+								<li><a href="https://https://www.youtube.com/watch?v=nNE2KElJh5o">Xuan Yuan Sword 2 (轩辕剑外传天之痕：黎民)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=RpFwE4fiLcg">Heroes of Jin Yong (金庸群侠传：竹苑情歌)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=1WNyPzD5HGY">Chinese Paladin (仙剑奇侠传：莫失莫忘)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=Eiq5hBi3KyQ">Demi-Gods and Semi-Devils (天龙八部：难念的经)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=V8AREjdfwLQ">A Chinese Odyssey (大话西游：芦苇荡)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=Q_Q4guHZC7A">The East Is Red (东方不败风云再起：雪千寻)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=lDO81TxmzsE">Here we are again (喜剧之王)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=Zw2dR6lRmuA">Demi-Gods and Semi-Devils (天龙八部：六脉神剑)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=fKwH1j-Gyw4">Demi-Gods and Semi-Devils (天龙八部：思君黯然)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=e6tFpBHtmU8">Legend of the white snake
-										Ep.1</a></li>
+										 (新白娘子传奇：青城山下白素贞)</a></li>
 								<li><a
 										href="https://www.youtube.com/watch?v=WSbZjOs_Jcc">https://www.youtube.com/watch?v=WSbZjOs_Jcc</a>
 								</li>
