--- a/personal/finger-style-guitar/index.htm
+++ b/personal/finger-style-guitar/index.htm
@@ -453,8 +453,10 @@
 									fetchpriority="high" height="638" sizes="(max-width: 856px) 100vw, 856px" src="../../files/2016/04/guitarocarina.jpg"
 									srcset=""
 									width="856"></p>
-							<p>I love making music with guitar and ocarina. I also work with my music partners with other instruments: banboo flute, erhu, and saxophone. Here are Youtube links of my music:</p>
+							<p>I love making music with guitar and ocarina (I played guitar for 4 years and ocarina for 6 months). I also make music with several partners who play other instruments: banboo flute, erhu, and saxophone. Here are Youtube links of my music:</p>
 							<ul>
+							<p><strong style="color: inherit;font-size: 2.5rem">Guitar + Ocarana
+								</strong></p>
 								<li><a href="https://www.youtube.com/watch?v=XXRdzcCr61U">Game of throne: Rains of Castamere (权力的游戏：卡斯特梅尔的雨季)</a></li>
 								<li><a
 										href="https://www.youtube.com/watch?v=mtYE3mRpLxY&list=RDMMmtYE3mRpLxY&start_radio=1">Black Myth Wukong (西游记：敢问路在何方)</a></li>
@@ -489,6 +491,14 @@
 								<li><a href="https://www.youtube.com/watch?v=fKwH1j-Gyw4">Demi-Gods and Semi-Devils (天龙八部：思君黯然)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=e6tFpBHtmU8">Legend of the white snake
 										 (新白娘子传奇：青城山下白素贞)</a></li>
+								<p><strong style="color: inherit;font-size: 2.5rem">Guitar + Bamboo Flute
+								</strong></p>
+								<p><strong style="color: inherit;font-size: 2.5rem">Guitar + Er'hu
+								</strong></p>
+								<p><strong style="color: inherit;font-size: 2.5rem">Guitar + Saxophone
+								</strong></p>
+
+
 								<li><a
 										href="https://www.youtube.com/watch?v=WSbZjOs_Jcc">https://www.youtube.com/watch?v=WSbZjOs_Jcc</a>
 								</li>
