--- a/personal/finger-style-guitar/index.htm
+++ b/personal/finger-style-guitar/index.htm
@@ -453,7 +453,7 @@
 									fetchpriority="high" height="638" sizes="(max-width: 856px) 100vw, 856px" src="../../files/2016/04/guitarocarina.jpg"
 									srcset=""
 									width="856"></p>
-							<p>I love making music with guitar and ocarina (I played guitar for 4 years and ocarina for 6 months). I also make music with several partners who play other instruments: banboo flute, erhu, and saxophone. Here are Youtube links of my music:</p>
+							<p>I love making music with guitar and ocarina (I started playing fingerstyle guitar since 2022 and ocarina since 2024). I also make music with several partners who play other instruments: banboo flute, erhu, and saxophone. Here are Youtube links of my music:</p>
 							<ul>
 							<p><strong style="color: inherit;font-size: 2.5rem">Guitar + Ocarana
 								</strong></p>
