--- a/personal/finger-style-guitar/index.htm
+++ b/personal/finger-style-guitar/index.htm
@@ -454,7 +454,10 @@
 									fetchpriority="high" height="638" sizes="(max-width: 856px) 100vw, 856px" src="../../files/2016/04/guitarocarina.jpg"
 									srcset=""
 									width="856"></p>
-							
+							<p><img alt="" class="wp-image-855 alignleft" decoding="async"
+									fetchpriority="high" height="638" sizes="(max-width: 856px) 100vw, 856px" src="../../files/2016/04/guitarflute.jpg"
+									srcset=""
+									width="856"></p>
 							<ul>
 							<p><strong style="color: inherit;font-size: 2.5rem">Guitar + Ocarana
 								</strong>
