--- a/personal/finger-style-guitar/index.htm
+++ b/personal/finger-style-guitar/index.htm
@@ -460,7 +460,7 @@
 								</strong>
 								<li><a href="https://www.youtube.com/watch?v=mtYE3mRpLxY&list=RDMMmtYE3mRpLxY&start_radio=1">Black Myth Wukong (西游记：敢问路在何方)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=sBYpv_c7JUo">Castle in the sky (天空之城)</a></li>
-								<li><a href="https://https://www.youtube.com/watch?v=EFRaXTVEMnw">Scarborough fair (毕业生：斯卡布罗集市)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=EFRaXTVEMnw">Scarborough fair (毕业生：斯卡布罗集市)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=pk0OaOmlsJw">Tai chi master (太极张三丰：随缘)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=38OG3hXYWB0">Inuyasha 1 (犬夜叉：穿越时空的思念)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=u9E-jqkcpAQ">Inuyasha 2 (犬夜叉：慕情)</a></li>
