--- a/personal/finger-style-guitar/index.htm
+++ b/personal/finger-style-guitar/index.htm
@@ -480,7 +480,7 @@
 								<li><a href="https://youtube.com/watch?v=0qNLN4u_G4c">Fox Volant of the Snowy Mountain (雪山飞狐：追梦人)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=UiVfshjvCcw">The Smiling, Proud Wanderer (笑傲江湖：清心普善咒)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=8aWPYVHO1As">Xuan Yuan Sword 1 (轩辕剑外传天之痕：如忆玉儿曲)</a></li>
-								<li><a href="https://https://www.youtube.com/watch?v=nNE2KElJh5o">Xuan Yuan Sword 2 (轩辕剑外传天之痕：黎民)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=nNE2KElJh5o">Xuan Yuan Sword 2 (轩辕剑外传天之痕：黎民)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=RpFwE4fiLcg">Heroes of Jin Yong (金庸群侠传：竹苑情歌)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=1WNyPzD5HGY">Chinese Paladin (仙剑奇侠传：莫失莫忘)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=fKwH1j-Gyw4">Demi-Gods and Semi-Devils (天龙八部：思君黯然)</a></li>
