--- a/personal/finger-style-guitar/index.htm
+++ b/personal/finger-style-guitar/index.htm
@@ -462,7 +462,7 @@
 								<li><a href="https://www.youtube.com/watch?v=sBYpv_c7JUo">Castle in the sky (天空之城)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=EFRaXTVEMnw">Scarborough fair (毕业生：斯卡布罗集市)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=pk0OaOmlsJw">Tai chi master (太极张三丰：随缘)</a></li>
-								<li><a href="https://www.youtube.com/watch?v=38OG3hXYWB0">Inuyasha 1 (犬夜叉：穿越时空的思念)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=QV6hB-G045M">Inuyasha 1 (犬夜叉：穿越时空的思念)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=u9E-jqkcpAQ">Inuyasha 2 (犬夜叉：慕情)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=WWmlMIeEGTg">Childhood memory (童年回忆)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=PnBA_baI7ps">Dying to survive (我不是药神：只要平凡)</a></li>
