--- a/personal/finger-style-guitar/index.htm
+++ b/personal/finger-style-guitar/index.htm
@@ -456,7 +456,7 @@
 									width="856"></p>
 							
 							<ul>
-							<p><strong style="color: inherit;font-size: 2.5rem">Guitar + Ocarana
+							<p><strong style="color: inherit;font-size: 2.5rem">Guitar + Ocarina
 								</strong>
 								<li><a href="https://www.youtube.com/watch?v=mtYE3mRpLxY&list=RDMMmtYE3mRpLxY&start_radio=1">Black Myth Wukong (西游记：敢问路在何方)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=sBYpv_c7JUo">Castle in the sky (天空之城)</a></li>
@@ -484,6 +484,8 @@
 								<li><a href="https://www.youtube.com/watch?v=RpFwE4fiLcg">Heroes of Jin Yong (金庸群侠传：竹苑情歌)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=1WNyPzD5HGY">Chinese Paladin (仙剑奇侠传：莫失莫忘)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=fKwH1j-Gyw4">Demi-Gods and Semi-Devils (天龙八部：思君黯然)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=w7Db8uZkOJ0">My gifts from the world (世界赋予我的)</a></li>
+								<li><a href="https://www.youtube.com/watch?v=NYn3oBskuxw">Mariage d'Amour (梦中的婚礼)</a></li>
 								</p>
 
 								
