--- a/personal/running/index.htm
+++ b/personal/running/index.htm
@@ -615,7 +615,7 @@
 								<li>Skinny Turkey Half Marathon (Nov.26, 2015)</li>
 								<li>Skinny Turkey Half Marathon (Nov.20, 2017)</li>
 								<li>Halloween Half Marathon (Oct.18, 2025) [<a
-										href="../../files/2025/HM_Morristown_NJ_Oct25.png">photos</a>]</li>
+										href="../../files/2025/HM_Morristown_NJ_Oct25.jpg">photos</a>]</li>
 							</ul>
 							<p>&nbsp;</p>
 							<p><img loading="lazy" decoding="async" class="size-large wp-image-896 alignleft"
