--- a/publications/index.htm
+++ b/publications/index.htm
@@ -735,9 +735,15 @@
 								<li><strong>Online Learning and Optimization for Queues with Unknown Arrival Rate and Service Distribution</strong> Under minor revision at <em>Operations Research.</em> (with	Xinyun Chen and Guiyu Hong) [<a
 										href="../files/2025/LiQUAR_main.pdf">PDF</a>]
 								</li>
+								<li><strong>Solving Nonstationary Non-Markovian Queueing Systems: A Transfer Learning Neural Network Approach</strong> Working paper.</em> (with Spyros Garyfallos, Pere Barlet-Ros and Albert Cabellos-Aparicio) [<a
+										href="../files/2025/QUANT_AMLC25_final.pdf">PDF</a>] AMLC presentation [<a
+										href="../files/2025/QUANT_AMLC25_final.pdf">PDF</a>]
+								</li>
+								<!--
 								<li><strong>Self-Service or Staffed Checkout? Service Channel Strategies in Supermarkets</strong> Working paper.</em> (with	Ke Sun, Zhongbin Wang, Jingchen Liu) [<a
 										href="../files/2025/SST_2025.pdf">PDF</a>]
 								</li>
+								-->
 							</ul>
 							<p><span style="font-family: UniversRoman, arial, sans-serif"><span
 										style="font-size: 25px"><b>Conference Proceedings, Extended Abstract and
