--- a/publications/index.htm
+++ b/publications/index.htm
@@ -826,8 +826,13 @@
 								</li>
 							</ul>
 							<ul>
-								<li><strong>RECoRD: A Multi-Agent LLM Framework for Reverse Engineering Codebase to Relational Diagram. </strong>The 2025 International Conference of Machine Learning, 2025. (With Yuan Xue, Yunfei Bai, Xiaoyu Lu and Hoiyi Ng)[<a
-										href="../files/2025/RECoRD_ICML.pdf">PDF</a>]
+								<li><strong>RECoRD: A Multi-Agent LLM Framework for Reverse Engineering Codebase to Relational Diagram. </strong>The 40th Annual AAAI Conference on Artificial Intelligence, 2026. (With Yuan Xue, Yunfei Bai, Xiaoyu Lu and Hoiyi Ng)[<a
+										href="../files/2025/AAAI_2026_Camera_Ready.pdf">PDF</a>]
+								</li>
+							</ul>
+							<ul>
+								<li><strong>Proactive Remote Operation of Automated Vehicles: Supporting human controllability. </strong>Handbook of Human-Centered Artificial Intelligence. Springer, Singapore. pp.1-47 (2026) (With Feng, J., Bai, X., Cunningham, C.M.)[<a
+										href="https://link.springer.com/rwe/10.1007/978-981-97-8440-0_107-1">doi</a>]
 								</li>
 							</ul>
 							<hr>
