--- a/publications/index.htm
+++ b/publications/index.htm
@@ -746,8 +746,7 @@
 								-->
 							</ul>
 							<p><span style="font-family: UniversRoman, arial, sans-serif"><span
-										style="font-size: 25px"><b>Conference Proceedings, Extended Abstract and
-											Others</b></span></span></p>
+										style="font-size: 25px"><b>Conference Proceedings, Book Chapters, and Extended Abstract</b></span></span></p>
 							<ul>
 								<li><strong>A Fluid Approximation for Large-Scale Service
 										Systems</strong>. <em>Performance Evaluation Review</em>, Special issue on 2011
