--- a/publications/index.htm
+++ b/publications/index.htm
@@ -736,9 +736,13 @@
 										href="../files/2025/LiQUAR_main.pdf">PDF</a>]
 								</li>
 								<li><strong>Solving Nonstationary Non-Markovian Queueing Systems: A Transfer Learning Neural Network Approach</strong> Working paper.</em> (with Spyros Garyfallos, Pere Barlet-Ros and Albert Cabellos-Aparicio) [<a
-										href="../files/2025/QUANT_AMLC25_final.pdf">PDF</a>] AMLC presentation [<a
-										href="../files/2025/QUANT_AMLC25_final.pdf">PDF</a>] Spyros' thesis presentation [<a
-										href="../files/2025/DL_NSNM.pdf">PDF</a>] 
+										href="../files/2025/QUANT_AMLC25_final.pdf">PDF</a>] 
+										<ul>
+										<li><strong>AMLC presentation</strong>  [<a
+										href="../files/2025/QUANT_AMLC25_final.pdf">PDF</a>]
+										<li><strong>Spyros' thesis presentation</strong>  [<a
+										href="../files/2025/DL_NSNM.pdf">PDF</a>]
+									</ul>
 								</li>
 								<!--
 								<li><strong>Self-Service or Staffed Checkout? Service Channel Strategies in Supermarkets</strong> Working paper.</em> (with	Ke Sun, Zhongbin Wang, Jingchen Liu) [<a
