--- a/publications/index.htm
+++ b/publications/index.htm
@@ -836,7 +836,7 @@
 							</ul>
 							<ul>
 								<li><strong>Proactive Remote Operation of Automated Vehicles: Supporting human controllability. </strong>Handbook of Human-Centered Artificial Intelligence. Springer, Singapore. pp.1-47 (2026) (With Feng, J., Bai, X., Cunningham, C.M.)[<a
-										href="https://link.springer.com/rwe/10.1007/978-981-97-8440-0_107-1">doi</a>]
+										href="../files/2025/AV25.pdf">PDF</a>]
 								</li>
 							</ul>
 							<hr>
