--- a/publications/index.htm
+++ b/publications/index.htm
@@ -803,6 +803,10 @@
 								<li><strong>Simulating Customer Wait-Time Metrics in Nonstationary Queues: A Queue-based Conditional Estimator for Variance Reduction. </strong>Proceedings of
 									the 2025 Winter Simulation Conference (WSC), Seattle, WA, 2025. (With Ling Zhang)[<a
 										href="../files/2025/WSC_25_CASE.pdf">PDF</a>]
+									<ul>
+										<li><strong>WSC presentation</strong>  [<a
+										href="../files/2025/WSC25_CASE_slides.pdf">PDF</a>]
+									</ul>
 								</li>
 							</ul>
 							<ul>
