--- a/index.htm
+++ b/index.htm
@@ -557,11 +557,9 @@
                             Ph.D. adviser is Professor <a href="http://www.columbia.edu/~ww2040">Ward Whitt.</a></p>
                         <h2>Research and Teaching</h2>
                         <p><strong>My research interests are below:</strong><br>
-                            &#8211; <em><strong>Methodologies</strong></em>: stochastic modeling, applied
-                            probability, computer simulation, queueing theory, queueing economics, optimal control,
-                            and reinforcement learning;<br>
-                            &#8211; <strong><em>Applications</em></strong>: customer contact centers, health care, 
-                            manufacturing systems, blockchain systems, food service systems, and supply chain systems.</p>
+                            &#8211; <em><strong>Methodologies</strong></em>: stochastic modeling and optimization, computer simulation, queueing theory, optimal control,
+                            and reinforcement learning, optimization with deep learning;<br>
+                            &#8211; <strong><em>Applications</em></strong>: supply chain, customer contact centers, on-demand service systems.</p>
                         <p><strong>The classes I used to teach at NC State include:</strong><br>
                             &#8211; “<strong>ISE 362: Stochastic Models in IE</strong>”,<br>
                             An introductory level Operations Research course for undergraduate students;<br>
