--- a/index.htm
+++ b/index.htm
@@ -556,9 +556,10 @@
                             with time-varying arrivals, customer abandonment and non-exponential distributions”. My
                             Ph.D. adviser is Professor <a href="http://www.columbia.edu/~ww2040">Ward Whitt.</a></p>
                         <h2>Research and Teaching</h2>
-                        <p><strong>My research interests are below:</strong><br>
-                            &#8211; <em><strong>Methodologies</strong></em>: stochastic modeling and optimization, computer simulation, queueing theory, optimal control,
-                            and reinforcement learning, optimization with deep learning;<br>
+                        <p><strong>My research interests are below:
+                        </strong><br>
+                             &#8211; <em><strong>Operations Research Methodologies</strong></em>: stochastic modeling and optimization, computer simulation, queueing theory, optimal control and Markov decision process;<br>
+                            &#8211; <em><strong>Machine Learning and GenAI</strong></em>: reinforcement learning, optimization with deep learning, LLM-based decision making;<br>
                             &#8211; <strong><em>Applications</em></strong>: supply chain, customer contact centers, on-demand service systems.</p>
                         <p><strong>The classes I used to teach at NC State include:</strong><br>
                             &#8211; “<strong>ISE 362: Stochastic Models in IE</strong>”,<br>
