--- a/publications/index.htm
+++ b/publications/index.htm
@@ -734,6 +734,10 @@
 								</li>
 								<li><strong>Online Learning and Optimization for Queues with Unknown Arrival Rate and Service Distribution</strong> Accepted at <em>Operations Research.</em> (with	Xinyun Chen and Guiyu Hong) [<a
 										href="../files/2025/LiQUAR_main.pdf">PDF</a>]
+									<ul>
+										<li><strong>e-Companion</strong> [<a
+												href="../files/2025/LiQUAR_EC.pdf">PDF</a>]</li>
+									</ul>
 								</li>
 								<li><strong>Solving Nonstationary Non-Markovian Queueing Systems: A Transfer Learning Neural Network Approach</strong> Working paper.</em> (with Spyros Garyfallos, Pere Barlet-Ros and Albert Cabellos-Aparicio) [<a
 										href="../files/2025/QUANT_AMLC25_final.pdf">PDF</a>] 
