--- a/publications/index.htm
+++ b/publications/index.htm
@@ -737,7 +737,7 @@
 									</ul>
 								</li> 
 								<li><strong>Online Learning and Optimization for Queues with Unknown Arrival Rate and Service Distribution</strong> Accepted at <em>Operations Research.</em> (with	Xinyun Chen and Guiyu Hong) [<a
-										href="../files/2025/LiQUAR_main.pdf">PDF</a>]
+										href="../files/2025/LiQUAR_published.pdf">PDF</a>]
 									<ul>
 										<li><strong>e-Companion</strong> [<a
 												href="../files/2025/LiQUAR_EC.pdf">PDF</a>]</li>
